fixed some weird errors in the menu.java file